# serial

./: CMakeLists.txt  serial.pc.in  serialConfig.cmake.in
